# Athena

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVREAD.md  README.md  answers.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
athena-vault/: Glossary.md  Home.md
athena-vault/01 Vision/: Long-Term Architecture & Development Order.md  North Star.md
athena-vault/02 Architecture/: Exchange Adapter Pattern.md  System Architecture & Repository Layout.md
athena-vault/03 Data Layer/: Data Sources.md  Exchange Adapters.md  Schemas.md  TimescaleDB Storage.md
athena-vault/04 Principles/: Coding Guidelines & Operating Principles.md  Trading Research Rules.md
athena-vault/05 AI Agents/: AI Agent Policy.md
athena-vault/06 Roadmap/: Roadmap.md
athena-vault/07 Decisions/: Open Questions Log.md
athena-vault/08 Setup/: Getting Started.md
backend/data/: schemas.py
backend/data/adapters/: base.py  binance.py  bybit.py
backend/data/storage/: schema.sql  timescale_writer.py
docs/: ARCHITECTURE.md  PRINCIPLES.md  ROADMAP.md  answers_obsidian_optimized.md
scripts/: ingest_bybit_funding.py
site/: index.html
tests/: test_bybit_adapter.py  test_schemas.py  test_timescale_writer.py
